; ModuleID = '/home/carl/AnghaBench/linux/arch/arm/mm/extr_cache-l2x0-pmu.c_l2x0_pmu_offline_cpu.c'
source_filename = "/home/carl/AnghaBench/linux/arch/arm/mm/extr_cache-l2x0-pmu.c_l2x0_pmu_offline_cpu.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@pmu_cpu = common dso_local global i32 0, align 4
@cpu_online_mask = common dso_local global i32 0, align 4
@nr_cpu_ids = common dso_local global i32 0, align 4
@l2x0_pmu = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @l2x0_pmu_offline_cpu to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @l2x0_pmu_offline_cpu(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = call i32 @cpumask_test_and_clear_cpu(i32 %5, i32* @pmu_cpu)
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %9, label %8

8:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %24

9:                                                ; preds = %1
  %10 = load i32, i32* @cpu_online_mask, align 4
  %11 = load i32, i32* %3, align 4
  %12 = call i32 @cpumask_any_but(i32 %10, i32 %11)
  store i32 %12, i32* %4, align 4
  %13 = load i32, i32* %4, align 4
  %14 = load i32, i32* @nr_cpu_ids, align 4
  %15 = icmp uge i32 %13, %14
  br i1 %15, label %16, label %17

16:                                               ; preds = %9
  store i32 0, i32* %2, align 4
  br label %24

17:                                               ; preds = %9
  %18 = load i32, i32* @l2x0_pmu, align 4
  %19 = load i32, i32* %3, align 4
  %20 = load i32, i32* %4, align 4
  %21 = call i32 @perf_pmu_migrate_context(i32 %18, i32 %19, i32 %20)
  %22 = load i32, i32* %4, align 4
  %23 = call i32 @cpumask_set_cpu(i32 %22, i32* @pmu_cpu)
  store i32 0, i32* %2, align 4
  br label %24

24:                                               ; preds = %17, %16, %8
  %25 = load i32, i32* %2, align 4
  ret i32 %25
}

declare dso_local i32 @cpumask_test_and_clear_cpu(i32, i32*) #1

declare dso_local i32 @cpumask_any_but(i32, i32) #1

declare dso_local i32 @perf_pmu_migrate_context(i32, i32, i32) #1

declare dso_local i32 @cpumask_set_cpu(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
